# matek

./: .gitignore  .travis.yml  LICENSE  matek.cabal  stack.yaml
cbits/: matek_exceptions.h
src/: Matek.hs
src/Matek/: Inline.hs  Scalars.hs  Types.hs
