name:                matek
version:             0.1.0.0
synopsis:            Efficient type-safe linear algebra
description:         Please see README.md
homepage:            https://github.com/chpatrick/matek
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           2016 Patrick Chilton
category:            Numeric
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag optimize-native
  description:         Optimize Matek for the local architecture (important for SSE, etc).
  default:             True

library
  hs-source-dirs:      src
  exposed-modules:     Matek
                       Matek.Types
  other-modules:       Matek.Inline
                       Matek.Scalars
  c-sources:           src/Matek/Scalars.cpp
  build-depends:       base >= 4.7 && < 5,
                       tagged,
                       primitive,
                       ghc-prim,
                       inline-c,
                       inline-c-cpp,
                       template-haskell,
                       parsec,
                       vector,
                       raw-strings-qq,
                       mtl,
                       containers
  pkgconfig-depends:   eigen3
  extra-libraries:     stdc++
  include-dirs:        cbits
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-redundant-constraints
  cc-options:          -std=c++11 -Wall -fexceptions -O2
  if flag (optimize-native)
    cc-options:        -march=native